src/test/ui/error-codes/E0004-2.stderr
error[E0004]: non-exhaustive patterns: `None` and `Some(_)` not covered
  --> $DIR/E0004-2.rs:9:11
   |
LL |     match x { }
   |           ^ patterns `None` and `Some(_)` not covered
   | 
  ::: $SRC_DIR/libcore/option.rs:LL:COL
   |
LL |     None,
   |     ---- not covered
...
LL |     Some(#[stable(feature = "rust1", since = "1.0.0")] T),
   |     ---- not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to previous error

For more information about this error, try `rustc --explain E0004`.
